--- a/selfPace/style.css
+++ b/selfPace/style.css
@@ -60,7 +60,7 @@ header{
     justify-content: space-between;
     z-index: 1000;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-   
+    margin-bottom: 30px;
 }
 header .logo{
     font-size: 3rem;
@@ -108,17 +108,24 @@ header .fa-bars{
     display: flex;
     margin-bottom: 30px;
     color: red;
-    margin-top: 60px;
+    margin-top: 10px;
    
+  }
+  #slideShow{
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: 5px;
   }
   .slideshow{
     width: 200px;
     height: 200px;
     border: 3px solid #000;
-    /* overflow: hidden; */
-    margin: 20px;
+    margin-top: 20px;
     position: relative;
     object-fit: cover;
+    display: flex;
+    justify-content: center;
   
 }
 .slide-child{
@@ -174,3 +181,32 @@ body .images1, .images3, .images2, p{
     margin-bottom: 15px;
     
 }
+
+.footer{
+    background-color: #000;
+    color: #fff;
+    width: 100%;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+
+}
+.contacts{
+    background-color: var(--pink);
+    width: 100%;
+    min-height: 20px;
+    margin-bottom: 15px;
+    font-size: 15px;
+
+}
+.icons{
+    font-size: 25px;
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.footer .icons i:hover{
+    color: #e84393;
+}
+
