--- a/selfPace/style.css
+++ b/selfPace/style.css
@@ -53,7 +53,7 @@ section{
 header{
     position: fixed;
     top: 0; left: 0; right: 0;
-    background: #fff;
+    background: rgba(0, 0, 0, .3);
     padding: 2rem 9%;
     display: flex;
     align-items: center;
@@ -86,6 +86,8 @@ header .icons a{
 }
 header .icons a:hover{
     color: var(--pink);
+    text-underline-position: below;
+    text-underline-offset: below;
 }
 header #toggler{
     display: none;
@@ -101,6 +103,11 @@ header .fa-bars{
 }
 #section1{
     margin-top: 60px;
+    display: flex;
+    align-items: center;
+    margin: 50px;
+    padding:50px 50px;
+    background-image: image(src="./images/c1.jpeg");
 }
 
   #countdown {
@@ -181,7 +188,74 @@ body .images1, .images3, .images2, p{
     margin-bottom: 15px;
     
 }
+#section2{
+    width: 100%;
+    min-height: 300px;
+    background-color: rgba(0, 0, 0, .3);
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+}
+#video-background{
+    width: 100%;
+    min-height: 100%;
+    position: fixed;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+      z-index: -1;
+}
+.aboutMe{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 
+}
+.myStory{
+    width: 80%;
+    min-height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* align-items: center; */
+    /* z-index: 1; */
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+}
+.profilePic{
+    background-color: rgba(0, 0, 0, .3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    /* box-shadow: rgba(255, 51, 153, .05); */
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    margin-left: 80rem;
+    z-index: 1;
+}
+.profile{
+    background-color: aqua;
+    width: 280px;
+    height: 280px;
+    padding: 5px;
+    border-radius: 50%;
+    border-style: ridge;
+    overflow: hidden;
+    object-fit: cover;
+
+    
+}
+.Ppic{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
 .footer{
     background-color: #000;
     color: #fff;
